# SAP-CAPM-APP-BUILDER

./: .env.example  .gitignore  AGENT_DEVELOPMENT_GUIDE.md  AGENT_MIGRATION_CHECKLIST.md  AGENT_RETRY_MIGRATION_GUIDE.md  AGENT_UPGRADE_GUIDE.md  APP_PREVIEW_EXPLANATION.md  ARCHITECTURE_VERIFICATION_REPORT.md  ARTIFACT_FLOW_DIAGRAM.md  BUGFIX_GRAPH_ROUTING.md  BUGFIX_MODEL_SELECTION.md  BUG_FIX_SUMMARY.md  CHECKPOINTER_FIX_SUMMARY.md  CI_CD_BUG_FIX.md  CLEANUP_SUMMARY.md  CODEBASE_HEALTH_REPORT.md  COMPLETION_SUMMARY.md  CRITICAL_BUGS_FIXED.md  Dockerfile  Dockerfile.dev  FEATURE_FLAGS_BUG_FIX.md  FIXES_VISUAL_SUMMARY.md  GEMINI_FIX_SUMMARY.md  HUMAN_GATES_IMPLEMENTATION.md  HUMAN_GATE_BUG_FIXES.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPORT_ERROR_FIX.md  IMPORT_FIX_SUMMARY.md  INTEGRATION_CHECKLIST.md  LANGGRAPH_ARCHITECTURE_FIXES.md  LANGSMITH_REAL_TIME_MONITORING.md  LANGSMITH_SETUP_COMPLETE.md  MIGRATION_COMPLETE_SUMMARY.md  MIGRATION_STATUS_REPORT.md  MULTITENANCY_BUG_FIX.md  NONE_OUTPUT_BUG_FIX.md  PHASE_2_COMPLETE.md  PHASE_2_MIGRATION_SUMMARY.md  PHASE_2_PROGRESS.md  (+57 more)
backend/: config.py  database.py  main.py  model_catalog.py  test_api.py  test_plan.py
backend/agents/: __init__.py  api_governance.py  audit_logging.py  business_logic.py  chat_modifier.py  ci_cd.py  compliance_check.py  correction.py  data_modeling.py  db_migration.py  deployment.py  documentation.py  domain_modeling.py  error_handling.py  (+29 more)
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
scripts/: check_db.py  deploy.ps1  deploy.sh  trigger_build.py
(+56 files in other folders)
